src/LuckyDraw V1.0/src/objects/WeChatAccount__c.object
<CustomObject>
    <description>To store customer&apos;s WeChat Accounts and test WeChat Accounts</description>
    <fields>
        <fullName>AppId__c</fullName>
        <label>App ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppSecret__c</fullName>
        <label>App Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>WeChat Official Accounts</relationshipLabel>
        <relationshipName>WeChatOfficialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QRCodeImageID__c</fullName>
        <label>QR Code Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QRCode__c</fullName>
        <formula>IF(NOT(ISBLANK(QRCodeImageID__c)), IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + QRCodeImageID__c , &apos;No Attachment&apos;, 100, 100), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                    <default>true</default>
                    <label>Test</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeChatAdmin__c</fullName>
        <label>WeChat Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeChatId__c</fullName>
        <label>WeChat ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeChatOriginId__c</fullName>
        <label>WeChat Origin ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WeChat Official Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Official Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>